--- a/Conversa/Base.lproj/Localizable.strings
+++ b/Conversa/Base.lproj/Localizable.strings
@@ -1,6 +1,6 @@
 
 /* No comment provided by engineer. */
-"categories_searchbar_placeholder" = "Search for businesses, stores, etc";
+"categories_searchbar_placeholder" = "Search for stores and businesses";
 
 "category" = "Category";
 
@@ -9,6 +9,9 @@
 
 /* No comment provided by engineer. */
 "category_results_error" = "Uphs, please try again";
+
+/* No comment provided by engineer. */
+"chat_searchbar_placeholder" = "Search in your chats";
 
 /* No comment provided by engineer. */
 "chats_alert_action_clear_conversation" = "Clear conversation";
@@ -129,7 +132,7 @@
 "conversation_menu_item_delete" = "Delete";
 
 /* No comment provided by engineer. */
-"conversation_message_from_conversa" = "By Conversa Agent";
+"conversation_message_from_conversa" = "Via conversa agent";
 
 /* No comment provided by engineer. */
 "conversation_message_info_downloading" = "Downloading";
@@ -179,7 +182,8 @@
 /* No comment provided by engineer. */
 "no_internet_connection_message" = "No internet connection";
 
-"profile_share_text" = "Chat now with %1s, follow the link %2s";
+/* No comment provided by engineer. */
+"profile_share_text" = "Chat now with %1$@, follow the link %2$@";
 
 /* 
   Localizable.strings
@@ -272,6 +276,36 @@
 
 /* No comment provided by engineer. */
 "token_session_error" = "Another device has started session, this device will log out";
+
+/* No comment provided by engineer. */
+"tutorial_message_five" = "No phone calls. No emails. No social media. Just chat.";
+
+/* No comment provided by engineer. */
+"tutorial_message_four" = "Find the business on Conversa and start chatting 😁";
+
+/* No comment provided by engineer. */
+"tutorial_message_one" = "We made easy to contact and chat any local business";
+
+/* No comment provided by engineer. */
+"tutorial_message_three" = "Get more information about the service you need";
+
+/* No comment provided by engineer. */
+"tutorial_message_two" = "Chat to find out prices or availability about any product 💬📲";
+
+/* No comment provided by engineer. */
+"tutorial_title_five" = "You'll love it";
+
+/* No comment provided by engineer. */
+"tutorial_title_four" = "Whenever you need";
+
+/* No comment provided by engineer. */
+"tutorial_title_one" = "Welcome to Conversa 😎";
+
+/* No comment provided by engineer. */
+"tutorial_title_three" = "Or maybe";
+
+/* No comment provided by engineer. */
+"tutorial_title_two" = "Now you can";
 
 /* No comment provided by engineer. */
 "..." = "";
