--- a/Conversa/es.lproj/InfoPlist.strings
+++ b/Conversa/es.lproj/InfoPlist.strings
@@ -5,6 +5,6 @@
  Created by Edgar Gomez on 12/15/16.
  Copyright © 2016 Conversa. All rights reserved.
  */
-"NSCameraUsageDescription" = "$(PRODUCT_NAME) uso de cámara";
-"NSLocationWhenInUseUsageDescription" = "$(PRODUCT_NAME) uso de ubicación";
-"NSPhotoLibraryUsageDescription" = "$(PRODUCT_NAME) uso de librería";
+"NSCameraUsageDescription" = "Conversa uso de cámara";
+"NSLocationWhenInUseUsageDescription" = "Conversa uso de ubicación";
+"NSPhotoLibraryUsageDescription" = "Conversa uso de librería";
