--- a/Conversa/Base.lproj/InfoPlist.strings
+++ b/Conversa/Base.lproj/InfoPlist.strings
@@ -8,3 +8,4 @@
 "NSCameraUsageDescription" = "Conversa camera use";
 "NSLocationWhenInUseUsageDescription" = "Conversa location use";
 "NSPhotoLibraryUsageDescription" = "Conversa media library use";
+"NSMicrophoneUsageDescription" = "Conversa wants to use your microphone to call for Support";
