--- a/Conversa/es.lproj/InfoPlist.strings
+++ b/Conversa/es.lproj/InfoPlist.strings
@@ -8,3 +8,4 @@
 "NSCameraUsageDescription" = "Conversa uso de cámara";
 "NSLocationWhenInUseUsageDescription" = "Conversa uso de ubicación";
 "NSPhotoLibraryUsageDescription" = "Conversa uso de librería";
+"NSMicrophoneUsageDescription" = "Conversa quiere usar el micrófono para llamar a Soporte";
